# Computability

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  settings.gradle  vite.config.ts
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  publish.yml  quality.yml  release-windows.yml
app/: build.gradle
app/src/main/java/computability/: App.java  DFAmenu.java  Menu.java
app/src/main/java/computability/Controllers/: DFAController.java
app/src/main/java/computability/controller/: DFAController.java  Keyboard.java
app/src/test/java/computability/: AppTest.java  dfaTest.java  nfaTest.java
crates/computability-core/: Cargo.toml
crates/computability-core/src/: algorithms.rs  lib.rs  machine.rs
docs/: architecture.md  feature-matrix.md  jflap-compatibility.md
gradle/wrapper/: gradle-wrapper.properties
packaging/arch/: PKGBUILD.template
scripts/: check-release-metadata.mjs  create-arch-pkgbuild.mjs  create-update-manifest.mjs
src/: App.tsx  algorithmTheory.test.ts  algorithmTheory.ts  algorithms.tsx  canvasZoom.test.ts  canvasZoom.ts  catalog.ts  content.test.ts  domain.ts  guidedEditor.test.tsx  guidedEditor.tsx  i18n.tsx  main.tsx  styles.css  theory.ts  theoryEnglish.ts  theoryLocalized.ts  workspace.test.ts  workspace.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+20 files in other folders)
