[workspace]
members = ["crates/computability-core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/Tony0380/Computability"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
