[package]
name = "computability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop workbench for formal-language and computability models."

[lib]
name = "computability_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
computability-core = { path = "../crates/computability-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-process = "2.3"
tauri-plugin-updater = "2.9"
